--- a/undies/_undies.scss
+++ b/undies/_undies.scss
@@ -1,5 +1,5 @@
 // Bare CSS 1.0
-// http://undies.nyaggah.com
+// https://github.com/JoeyDoey/mycssundies
 // Copyright 2015 Joe Nyaggah
 // MIT License
 
